break file names that are too long: https://redmine.edina.ac.uk/issues/13637

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -309,6 +309,11 @@ input[name='lookup_dc_subject_classification']{
     clear: both;
 }
 
+/* break file names that are too long */
+#aspect_submission_StepTransformer_table_resumable-upload-summary td:nth-child(3){
+    word-break: break-all;
+}
+
 .resumable-dragover{
     color: #555;
     background-color: #ddd;
@@ -357,6 +362,7 @@ input[name='lookup_dc_subject_classification']{
     float: left;
     margin: 0 7px 20px 0;
 }
+
 
 /*************************** misc *******************************/
 
